crowi-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crowi
  template:
    metadata:
      labels:
        app: crowi
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1
      containers:
        - name: crowi
          image: ghcr.io/traptitech/crowi:traP-1.7.9-23
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - name: http
              containerPort: 3000
