crowi-dev/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: crowi-mongo
spec:
  selector:
    matchLabels:
      app: crowi-mongo
  serviceName: crowi-mongo
  replicas: 0
  template:
    metadata:
      labels:
        app: crowi-mongo
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1
      containers:
        - name: crowi-mongo
          image: mongo:3.6.3
          ports:
            - containerPort: 27017
              name: db
          volumeMounts:
            - name: data
              mountPath: /data/db
          resources:
            requests:
              cpu: "20m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
