crowi-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowi
spec:
  selector:
    app: crowi
  ports:
    - name: http
      port: 3000
      targetPort: http
