crowi-dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crowi

spec:
  entryPoints:
    - websecure
  tls:
    secretName: crowi-tls
  routes:
    - match: Host(`wiki-dev.trapti.tech`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - kind: Service
          name: crowi
          port: 3000
          scheme: http
